--- a/html/index.html
+++ b/html/index.html
@@ -7,8 +7,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&family=Playfair+Display:wght@600;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="../css/normalize.css">
+    <!--<link rel="stylesheet" href="../css/normalize.css">-->
     <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/frame.css">
     <script src="../js/tips.js"></script>
     <script src="../js/modal.js"></script> <!-- Подключаем скрипт для работы с модальным окном -->
 
@@ -142,6 +143,13 @@
             </div>
         </section>
     </main>
+
+    <!-- Первый фрейм -->
+    <iframe src="menu.html" style="border: 2px solid blue; width: 100%; height: 100%;" name="menuFrame"></iframe>
+
+    <!-- Второй фрейм -->
+    <iframe src="default.html" style="border: 2px solid blue; width: 100%; height: 100%;" name="contentFrame"></iframe>
+
     <footer class="footer">
         <div class="container">
             <div class="footer-inner">
